--- a/style.css
+++ b/style.css
@@ -111,11 +111,6 @@ header{
     padding: 50px;
     background-color: #fff;
 }
-  
-.best-sellers {
-    padding: 50px;
-    background-color: #f7f7f7;
-}
 
 .product-1 img{
     width: 100%;
@@ -130,6 +125,46 @@ header{
     height: 100vh;
 }
 
+.policy-section {
+    padding: 50px;
+    background-color: #f7f7f7;
+    justify-content: center;
+}
+
+.policy-section h3{
+    text-align: center;
+    font-family: Cinzel;
+    font-size: 40px;
+    padding: 40px 0;
+}
+
+.policy-section p{
+    font-size: 30px;
+    padding: 0 20px;
+    color: #000;
+}
+
+.policy-section a {
+    color: #413e3e;
+    font-size: 25px;
+    text-decoration: none;
+    border: 2px solid #4b4a4a;
+    border-radius: 50px;
+    padding: 15px 25px;
+    transition: 0.3s;
+    margin-top: 50px;
+}
+
+.policy-section a:hover{
+    background-color: #000;
+    color: #fff;
+}
+
+.learn-more-container a{
+    justify-content: center;
+    align-items: center;
+}
+  
 /* .caption{
     width: 100%;
     height: 100vh;
@@ -139,25 +174,60 @@ header{
     align-items: center;
 } */
 
+.contact-container{
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 100px;
+    font-size: 25px;
+}
+
+.contact-container h4{
+    border-bottom: #000 2px solid;
+    margin-bottom: 50px;
+}
+
+.contact-container li{
+    list-style: none;
+}
+
+.contact-container a{
+    text-decoration: none;
+    color: #000;
+}
+
+.contact-container a:hover{
+    color: aqua;
+}
+
+footer{
+    background-image: url("images/top-close-view-soda-can-dark-background.jpg");
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+ 
+
+
 @media (min-width: 768px) {
     /* show 3 items */
     .carousel-inner .active,
     .carousel-inner .active + .carousel-item,
     .carousel-inner .active + .carousel-item + .carousel-item {
-      display: block;
-    }
+    display: block;
+}
   
     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
     .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
-      transition: none;
-    }
+    transition: none;
+}
   
     .carousel-inner .carousel-item-next,
     .carousel-inner .carousel-item-prev {
-      position: relative;
-      transform: translate3d(0, 0, 0);
-    }
+    position: relative;
+    transform: translate3d(0, 0, 0);
+}
   
     .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {
       position: absolute;
