--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ header{
     padding: 15px 25px;
     transition: 0.3s;
     margin-top: 50px;
+    cursor: pointer;
 }
 
 .content a:hover{
@@ -196,18 +197,78 @@ header{
 }
 
 .contact-container a:hover{
-    color: aqua;
+    color: rgb(14, 71, 71);
 }
 
-footer{
-    background-image: url("images/top-close-view-soda-can-dark-background.jpg");
-    background-position: center;
-    background-size: cover;
+.form-container{
+    border: #000 1px solid;
+    background-color: rgb(5, 1, 27);
+    color: #ccc;
+    padding: 40px 80px 40px 40px;
+    border-radius: 5px;
+} 
+
+.form-container h3{
+    font-size: 30px;
+    font-style: Cinzel;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+.form-container input{
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.form-container label{
+    padding-top: 5px;
+    padding-bottom: 2px;
+}
+
+.form-container button{
+    padding: 5px;
+}
+
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+.form-container input[type=text], .form-container input[type=password] {
     width: 100%;
-    height: 100vh;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
 }
- 
 
+.popup-form {
+    display: none;
+    position: fixed;
+    z-index: 9;
+}
+
+.form-container .submit-btn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 2px;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
+}
+
+.form-container .close-btn {
+    background-color: red;
+    color: white;
+    width: 100%;
+    cursor: pointer;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 2px;
+}
 
 @media (min-width: 768px) {
     /* show 3 items */
